src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/EmrServerOutboundRequest__c.object-meta.xml
<CustomObject>
    <label>EMR Server Outbound Request</label>
    <nameField>
        <displayFormat>EOR-{0000}</displayFormat>
        <label>EMR Server Outbound Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMR Server Outbound Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>