src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/EmrServer__c.field-meta.xml
<CustomField>
    <fullName>EmrServer__c</fullName>
    <label>EMR Server</label>
    <referenceTo>EmrServer__c</referenceTo>
    <relationshipLabel>Outbound Requests</relationshipLabel>
    <relationshipName>EmrServerOutboundRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>