src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/RelatedToEntityId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToEntityId__c</fullName>
    <description>Stores the ID of the source object related to the request.</description>
    <externalId>true</externalId>
    <label>Related to (Id)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>