src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/RequestDuration__c.field-meta.xml
<CustomField>
    <fullName>RequestDuration__c</fullName>
    <description>Indicates the duration of the request to the EMR Server, measured in milliseconds (ms). This field provides insights into the performance of the request, enabling monitoring and analysis of response times and overall system efficiency.</description>
    <label>Request Duration (in ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>