src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/RequestPayload__c.field-meta.xml
<CustomField>
    <fullName>RequestPayload__c</fullName>
    <description>Stores the HTTP request body sent to the specified EMR Server. This field captures the payload of the request, allowing for easy reference and troubleshooting of the data transmitted during API interactions.</description>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>