src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/ResponsePayload__c.field-meta.xml
<CustomField>
    <fullName>ResponsePayload__c</fullName>
    <description>Stores the HTTP response body received from the EMR Server after processing a request. This field captures the data returned by the server, including any results, errors, or messages, providing valuable information for analysis and troubleshooting.</description>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>