src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Stores the HTTP status code returned by the EMR Server in response to a request. This code indicates the result of the operation, providing into whether it was successful, encountered an error, or required additional action.</description>
    <label>Status code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>