src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequest__c/fields/StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>StatusMessage__c</fullName>
    <description>Contains the status message returned by the EMR Server in response to a request. This message provides additional context regarding the outcome of the operation, such as success confirmation, error details, or informational notifications, aiding in troubleshooting and understanding system behavior.</description>
    <label>Status Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>